platform/service-mesh/istio/security/authorization/document-service/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: document-service
spec: {}
